<?xml version="1.0"?>
<package format="2">
  <name>mw_ahrs_ros</name>
  <version>0.1.0</version>
  <description>
    This packages provices the driver for MW-AHRSv1 sensor.
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>
  <depend>realtime_tools</depend>
</package>