<?xml version="1.0"?>
<package format="2">
  <name>mw_ahrs_ros</name>
  <version>0.2.0</version>
  <description>
    The driver package for MW-AHRS IMU sensor.
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>serial</depend>
  <depend>realtime_tools</depend>
</package>